--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,12 @@ android {
     }
     buildTypes {
         release {
+            lintOptions {
+                // lint  报错
+                checkReleaseBuilds false
+                abortOnError false
+            }
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
