--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,12 @@
             </intent-filter>
         </activity>
         <activity android:name="com.hxgz.chuantv.VideoDetailActivity"/>
-        <activity android:name="com.hxgz.chuantv.VideoPlayActivity"/>
+        <!--        <activity android:name="com.hxgz.chuantv.VideoPlayActivity"/>-->
         <activity android:name="com.hxgz.chuantv.PickerActivity"/>
         <activity android:name="com.hxgz.chuantv.SearchActivity"/>
+        <activity android:name="com.hxgz.chuantv.PlaybackActivity"/>
+
+        <service android:name=".playback.PlaybackService"/>
 
     </application>
 
