--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,11 @@ buildscript {
     repositories {
         google()
         jcenter()
-
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
-        
+
         classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
 
