--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
             android:name=".App"
             android:allowBackup="true"
-            android:icon="@drawable/backgroud"
+            android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:networkSecurityConfig="@xml/network_security_config"
